2006-06-15  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.2

2006-06-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (parse_broken_date): Fixed to handle
	MM-DD-YY properly and also to fallback to DD-MM-YY if the first
	pair of digits isn't within range for a proper month.

2006-05-30  Jeffrey Stedfast  <fejj@novell.com>

	* gmime.h.in: Removed.

	* gmime.h: Now static, no longer auto-generated.

	* gmime/gmime.c: Set the gmime_[major,minor,micro]_version
	variables.
	(g_mime_check_version): New function to check the required
	version.

	* gmime/gmime-stream-fs.c: Implement our own no-op version of
	fsync() for systems that don't have fsync().

2006-05-24  Jeffrey Stedfast  <fejj@novell.com>

	* examples/imap-example.c (main): Use g_mkdir() to make this
	example portable to Win32.

2006-05-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Handle prompts
	from GnuPG asking for the user's PIN for their SmartCard.

2006-04-21  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream.h: #include <stdio.h> for SEEK_SET/CUR/END
	enum values.

2006-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.1

	* gmime/gmime-parser.c (parser_step): No-op if we are in an ERROR
	state.
	(parser_construct_message): Don't bail if we don't start in state
	INIT, this is valid.
	(parser_step_from): We need to bail even if parser_fill() returns
	> 0 if the line is incomplete (e.g. a forced refill was needed but
	no additional data could be read).

2006-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.0, it's about time I made a
	stable release.

2006-03-15  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-parser.c (parser_step_from): If we fail to find a
	From line, set an error state. Also fixed the End-Of-Data check to