@@ -22,8 +22,6 @@
 #include <config.h>
 #endif
 
-#define _POSIX_SOURCE
-
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
