@@ -224,8 +224,6 @@ internet_address_set_addr (InternetAddress *ia, const char *addr)
 void
 internet_address_set_group (InternetAddress *ia, InternetAddressList *group)
 {
-	/*InternetAddressList *members, *next; */
-	
 	g_return_if_fail (ia != NULL);
 	g_return_if_fail (ia->type != INTERNET_ADDRESS_NAME);
 	
@@ -264,7 +262,7 @@ InternetAddressType
 internet_address_get_type (InternetAddress *ia)
 {
 	g_return_val_if_fail (ia != NULL, INTERNET_ADDRESS_NONE);
-
+	
 	return ia->type;
 }
 
@@ -278,7 +276,7 @@ const char *
 internet_address_get_name (InternetAddress *ia)
 {
 	g_return_val_if_fail (ia != NULL, NULL);
-
+	
 	return ia->name;
 }
 
@@ -294,7 +292,7 @@ internet_address_get_addr (InternetAddress *ia)
 {
 	g_return_val_if_fail (ia != NULL, NULL);
 	g_return_val_if_fail (ia->type != INTERNET_ADDRESS_GROUP, NULL);
-
+	
 	return ia->value.addr;
 }
 
@@ -310,7 +308,7 @@ internet_address_get_members (InternetAddress *ia)
 {
 	g_return_val_if_fail (ia != NULL, NULL);
 	g_return_val_if_fail (ia->type != INTERNET_ADDRESS_NAME, NULL);
-
+	
 	return ia->value.members;
 }
 
