@@ -1,3 +1,8 @@
+2006-06-22  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-gpg-context.c: Removed #define _POSIX_SOURCE to fix
+	bug #172179.
+
 2006-06-15  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Bumped version
